mywork/force-app/main/default/objects/State__c/State__c.object-meta.xml
<CustomObject>
    <description>This object will be used to store text representations of data on a per-user basis.

This object was first created for use with the Order Prioritization project.</description>
    <label>State</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>