mywork/force-app/main/default/objects/State__c/fields/State_Chunk_10__c.field-meta.xml
<CustomField>
    <fullName>State_Chunk_10__c</fullName>
    <label>State Chunk 10</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>