mywork/force-app/main/default/objects/State__c/fields/State_Token__c.field-meta.xml
<CustomField>
    <fullName>State_Token__c</fullName>
    <description>Piece of text to differentiate the States stored by functionality or application they correspond to.</description>
    <externalId>true</externalId>
    <label>State Token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>